# oolel-trainer

./: README.md  pyproject.toml  train.sh
.github/workflows/: ci.yml
src/: train.py
tests/: conftest.py  test_dataset.py  test_model.py
